# hachip

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: Binary.yml  BuildAndTest.yml  Web.yml
src/: cpu.rs  emulate_cycle_error.rs  emulator.rs  keypad.rs  lib.rs  main.rs  main_console.rs  ppu.rs
www/: index.html
