[package]
name = "hachip"
version = "0.0.1"
authors = ["koneko096 <laser.survivor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.1", features = ["bundled", "static-link"] }
log = "0.4"
env_logger = "0.7.1"
getrandom = "0.1.14"
