[package]
name = "hachip"
version = "0.0.1"
authors = ["koneko096 <laser.survivor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.1", features = ["bundled", "static-link"], optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.7.1", optional = true }
getrandom = { version = "0.2", optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
web-sys = { version = "0.3.64", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "console"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.37" }

[features]
console_ui = ["sdl2", "log", "env_logger", "getrandom"]
wasm_build = ["wasm-bindgen", "web-sys", "getrandom/js", "console_error_panic_hook"]

[lib]
name = "hachip_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"] # Add cdylib for WASM target

[[bin]]
name = "hachip_console"
path = "src/main_console.rs"
